--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ php:
     - 7.0
 
 before_script:
+    - sudo apt-get update -qq
+    - sudo apt-get install -qq php5-gmp
+    - echo "extension = php_gmp.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - composer self-update 
     - composer install
 
