--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-gmp": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "~4.8 || ~5.0"
     },
     "autoload": {
         "psr-4": {
