--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "~5.4 || ~7.0",
+        "php": "^5.6.1 || ~7.0",
         "ext-gmp": "*"
     },
     "require-dev": {
